# lineda

./: CMakeLists.txt  CMakeLists.txt~  Doxyfile  TAGS  lineda.pro  qmake64.conf  rgpAA.tgz  traveler.dot
aaf/: aa_aaf.h  aa_aafarithm.cpp  aa_aafcommon.cpp  aa_interval.cpp  aa_interval.h  aa_rounding.cpp  aa_rounding.h
bayesian/: event.cpp  event.hpp  fuzzyset.cpp  fuzzyset.hpp  membership.hpp  randvar.cpp  randvar.hpp  randvar.pro
cgl/: #kd_tree.cpp#  CMakeLists.txt  cgl.pro  intvl_set.cpp  intvl_set.hpp  kd_tree.cpp  kd_tree.hpp  kt_rectangle.hpp  overlap.cpp  overlap.cpp.bak  overlap.hpp  overlap.hpp.bak  overlap.hpp~  pt_bin_tree.cpp  pt_bin_tree.hpp  pt_stree.cpp  pt_stree.hpp  pt_stree_t.cpp  pt_tri_tree.cpp  pt_tri_tree.hpp  pt_tri_tree_t.cpp  sweeper.cpp  sweeper.cpp.bak  sweeper.hpp  sweeper.hpp.bak
coding_policy/: Main.cpp  bin_tree.cpp  bin_tree.hpp  policy.pro  rectangle.cpp  rectangle.hpp  rectangle_t.cpp  rectangle_t.hpp  snode.cpp  snode.hpp
cppunit/: CMakeLists.txt  CMakeLists.txt~  Main.cpp  bin_tree_t.cpp  bin_tree_t.hpp  concept_test_t.cpp  concept_test_t.hpp  cppunit.pro  dnode_t.cpp  dnode_t.hpp  interval_t.cpp  interval_t.hpp  intv_map_t.cpp  intv_map_t.hpp  intv_set_t.cpp  intv_set_t.hpp  intvl_set_t.cpp  intvl_set_t.hpp  kd_tree_t.cpp  kd_tree_t.hpp  kt_rectangle_t.cpp  kt_rectangle_t.cpp~  kt_rectangle_t.hpp  kt_rectangle_t.hpp~  matrix2_t.cpp  matrix2_t.cpp~  matrix2_t.hpp  matrix2_t.hpp~  orient_t.cpp  orient_t.hpp  overlap_t.cpp  overlap_t.hpp  path_t.cpp  path_t.cpp~  path_t.hpp  point_t.cpp  point_t.cpp~  point_t.hpp  polygon_t.cpp  polygon_t.hpp  (+24 more)
cutting/: Makefile  cutresult.txt  cutting.pro  functions.cpp  functions.hpp  main.cpp  pointer.cpp  pointer.hpp  polygonc.cpp  polygonc.hpp
cvxfit/: #cvxfitnd.m#  #cvxpwlfit.m#  autogen_spcvx_H.m  autogen_spcvxsd.m  corr.m  corr_cvx.m  cvxfit.m  cvxfit1d.m  cvxfit2.m  cvxfit2d.m  cvxfit3.m  cvxfit3d.m  cvxfitnd.m  cvxfitsd.m  cvxpwlfit.m  cvxpwlfit.m~  cvxpwlfit2d.m  cvxpwlfit2d.m~  data.m  monofit1d.fig  monofit1d.m  nonnegfit1d.m  nonnegfit1d.m~  pathdef.m  rank1fit.m  rank1fit2d.m  simple_fn.m  sp.mat  spcvx1d.m  spcvx2d.m  spcvx2d_gen.m  spcvx3d_gen.m  spcvx3d_gen_H.m  spcvxsd.m  spmono1d.m  spnonneg1d.m  test_3vars071214.m  test_3vars071214.m.mine  test_3vars071214.m.r2044  test_3vars071214.m.r2063
dsl/: CMakeLists.txt  bin_tree.cpp  bin_tree.hpp  bin_tree_draw.cpp  bin_tree_draw.hpp  brgcDist.c  bt_node.cpp  bt_node.hpp  dclist.cpp  dclist.hpp  dl_base.cpp  dl_base.hpp  dlist.hpp  dnode.cpp  dnode.hpp  dnode.hpp~  dsl.pro  dsl_algo.hpp  dslfwd.hpp  gbpqueue.cpp  gbpqueue.hpp  gdlist.cpp  gdlist.hpp  glist.cpp  glist.hpp  intv_map.cpp  intv_map.hpp  intv_multimap.cpp  intv_multimap.cpp~  intv_multimap.hpp  intv_multimap.hpp~  intv_multiset.cpp  intv_multiset.hpp  intv_set.cpp  intv_set.hpp  list.hpp  pst_tree.cpp  pst_tree.hpp  pst_tree_draw.cpp  pst_tree_draw.hpp  (+19 more)
dynpst/: Final_DmeObst_topology.eps  critical_area.eps  dynpst.tex  polygon.eps  polygon_cutting.eps  pst.eps  random_pd.bib  random_polygons.eps  rpolygon.eps  sf200.eps  sf50.eps  test.dot  ttt.eps
ellipsoid/: CMakeLists.txt  ellipsoid.cpp  ellipsoid.hpp  ellipsoid.pro  ex_aabox.cpp  ex_aabox.hpp  ex_aabox2.cpp  ex_aabox2.hpp  ex_box.cpp  ex_box.hpp  ex_box2.cpp  ex_box2.hpp  ex_opamp.cpp  ex_opamp.hpp  ex_opamp2.cpp  ex_opamp2.cpp~  ex_opamp2.hpp  ex_opamp4.cpp  ex_opamp4.hpp  ex_sphere.cpp  ex_sphere.hpp  linfrac.hpp  monomial.cpp  monomial.hpp  monomial.hpp~  posynomial.cpp  posynomial.hpp  posynomial.hpp~  quadratic.hpp  result_song.txt  robust_GP.cpp  robust_GP.hpp  testaabox.cpp  testaaopamp.cpp  testbox.cpp  testell.cpp  testell2.cpp  testopamp.cpp  testopamp4.cpp  testsphere.cpp
ellipsoid/gpBoyd/: check.m  two_opamp.m
ellipsoid/matlab/: check.m  ellipsoid.m  ellipsoid1.m  ex_box.m  glinfrac.m  gpellip.m  gquadratic.m  gspline.m  linfrac.m  opamp.m  quadratic.m  spline.m  testell.m  testell1.m  testell2.m  testell3.m  valspline.m
ellipsoidAA/: CMakeLists.txt  cvx_test1.cpp  cvx_test2.cpp  ellipsoid.h  gp_base.h  gp_prob1.cpp  gp_prob1.h  gp_test.cpp  monomial.h  pgellip.h  posynomial.h  rgp_base.cpp  rgp_base.h  rgp_prob1.cpp  rgp_prob1.h  rgp_test.cpp
enum/: setparthlpr.cpp  setparthlpr.hpp
geostat/: #det_convex_concave.m#  #result.log#  2d_corr_fn.fig  MLE.tex  aniso_cc_corr_fn.m  aniso_lsq_corr_fn.m  bspline_corr_fn.m  corr_mtrx_by_inv.eps  exp1d.m~  exp1d2_data.m  exp1d_data.eps  exp1d_data.m  exp1d_data.mat  exp1d_data.m~  exp1d_mvave.m  exp2d.m  exp2d.m~  exp2d2.m  exp2d3.m  exp2d_aniso.m  exp2d_data.m  exp2d_data.m~  exp2da.m  test.m  (+18 more)
numeric/: CMakeLists.txt  Notes  interval.cpp  interval.hpp  interval_t.cpp  matrix2.cpp  matrix2.cpp~  matrix2.hpp  matrix2.hpp~  matrix2_t.cpp  newton.cpp  newton.cpp~  newton.hpp  newton.hpp~  numeric.pro  numericfwd.hpp  polynomial.cpp  polynomial.cpp~  polynomial.hpp  polynomial_t.cpp  test.cpp  triple.cpp  triple.hpp  vector2.cpp  vector2.cpp~  vector2.hpp  vector2.hpp~
recti/: #segment.hpp#  CMakeLists.txt  checker.cpp  checker.hpp  coord_sys.cpp  coord_sys.hpp  geo_iter.cpp  geo_iter.hpp  gpolygon.cpp  gpolygon.hpp  grpolygon.cpp  grpolygon.hpp  orient.cpp  orient.hpp  path.cpp  path.cpp~  path.hpp  point.cpp  point.cpp~  point.hpp  point.hpp~  point_set.cpp  point_set.hpp  pointer.cpp  pointer.hpp  poly_rand.cpp  polygon.cpp  polygon.cpp~  polygon.hpp  polygon.hpp~  polygonn.cpp  polygonn.hpp  rectangle.cpp  rectangle.hpp  recti.pro  rectifwd.hpp  rectlink.cpp  rectlink.hpp  rpolygon.cpp  rpolygon.cpp~  (+11 more)
testing/gpolygon/: CMakeLists.txt  Main.cpp  gpolygon.pro
testing/polygon/: CMakeLists.txt  Main.cpp  polygon.pro
testing/segment/: CMakeLists.txt  Main.cpp  segment.pro
testing/slicing_flrpln/: CMakeLists.txt  Main.cpp  fourLR.ps  slicing_flrpln.pro  test.cpp  test.ps
testing/zonotope/: CMakeLists.txt  Main.cpp  Main.cpp~  zonotope.pro
utility/: CMakeLists.txt  a.out  concept_test.cpp  concept_test.hpp  dotstream.cpp  dotstream.hpp  future_t.cpp  lcs.cpp  lcs_t.cpp  svgstream.cpp  svgstream.hpp  test.c  test.cpp  thread_t.cpp  utility.hpp  utility.pro
(+348 files in other folders)
